templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bubliny-green
  name: bubliny-green
  namespace: mjankula-ns-2
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: bubliny-green
