templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    dc: kvm
    type: intranet
    app: bubliny-green
  name: bubliny-green
  namespace: mjankula-ns-2
spec:
  subdomain: bubliny-green
#  host: bubliny-green-mjankula-ns-2.mjankula-intranet.sbr-shift.gsslab.brq2.redhat.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bubliny-green
    weight: 100
